Sync all content

--- a/content/resources/5-310f19-th.md
+++ b/content/resources/5-310f19-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: A photograph of Dr. Dolhun standing at the chalkboard, wearing safety
   glasses and holding a small beaker containing a pale blue solution. There are two
   straws in the beaker.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-310-laboratory-chemistry-fall-2019/8f4a8eddc90b63150b3eaff501e6f64d_5-310f19-th.jpg
+file: /media/courses/5-310-laboratory-chemistry-fall-2019/8f4a8eddc90b63150b3eaff501e6f64d_5-310f19-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: What's in the beaker? What will happen next, and how does it relate to
@@ -14,8 +14,10 @@ image_metadata:
     glasses and holding a small beaker containing a pale blue solution. There are
     two straws in the beaker.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 5-310f19-th.jpg
 uid: 8f4a8edd-c90b-6315-0b3e-aff501e6f64d
 ---
+A photograph of Dr. Dolhun standing at the chalkboard, wearing safety glasses and holding a small beaker containing a pale blue solution. There are two straws in the beaker.
